Update deploy and test scripts; minor fixes post Docker removal